# osdev

./: .gitignore  CMakeLists.txt  Makefile  README.md  W2.cbp  catmfs.c  contious_heap.c  fs_node.c  gdt.c  heap.c  heap_array_list.c  ide.c  idt.c  irqs.c  isrs.c  keyboard.c  kmalloc.c  linkedlist.c  linker.ld  linker_script.pld  little_test.c  log.out  main.c  make.out  mutex.c  page.c  paging_heap.c  proc.c  schedule.c  screen.c  str.c  syscall.c  syscall.h  syscall_handler.c  system.c  timer.c  tss.c
asm/: inc.asm  irqs.asm  irqs.s  isrs.asm  isrs.s  multiboot.s  page.asm  page.s  ring.asm  rmode.asm  start.asm  start.i.asm  sys.s  syscall.asm  syscall.s
dev/: blk_dev.c  console.c  ide.c  io.c  ioctl.c  keyboard.c  screen.c  serial.c  timer.c  tty.c  vga.c
dev/include/: blk_dev.h  console.h  ide.h  io.h  ioctl.h  keyboard.h  screen.h  serial.h  timer.h  tty.h  vga.h
dev/tty/: tty.c
dev/tty/include/: tty.h
document/: catmfs.md  paging.md
exec/: exec.c
exec/elf/: elfloader.c
exec/elf/include/: elf.h  elfloader.h
exec/include/: exec.h
fs/catmfs/: catmfs.c  catmfs_def.h  catrfmt.c
fs/catmfs/include/: catmfs.h  catrfmt.h  catrfmt_def.h
fs/devfs/: devfile.c  devfs.c
fs/devfs/include/: devfile.h  devfs.h
fs/ext2/: ext2.c  ext2_fs_node.c
fs/ext2/include/: ext2.h  ext2_fs_node.h  superblk.h
fs/procfs/: procfs.c
fs/procfs/include/: procfs.h
fs/vfs/: fcntl.c  getdents.c  iov.c  open.c  readlink.c  stat.c  vfs.c
fs/vfs/include/: fcntl.h  getdents.h  iov.h  open.h  readlink.h  stat.h  vfs.h
include/: atadef.h  bochs_debug.h  catmfs.h  contious_heap.h  debug_print.h  fs_node.h  gdt.h  heap.h  heap_array_list.h  ide.h  idt.h  intdef.h  irqs.h  isrs.h  keyboard.h  kmalloc.h  linkedlist.h  multiboot.h  mutex.h  page.h  paging_heap.h  proc.h  schedule.h  screen.h  str.h  syscall.h  syscall_handler.h  system.h  time.h  timer.h  tss.h  va.h
ker/: cpuid.c  gdt.c  idt.c  irqs.c  isrs.c  random.c  system.c  tss.c
ker/include/: cpuid.h  gdt.h  isrs.h  random.h  system.h  tss.h
lib/: env.c  file.c  malloc.c  mem.c  print.c  start.c  str.c  syscall.c  uexec.c
lib/include/: def.h  env.h  errno.h  file.h  intdef.h  malloc.h  print.h  stat.h  stdint.h  str.h  syscall.h  syscallno.h  uexec.h  ugetdents.h  uioctl.h  umem.h  uproc.h  ustat.h  uvfs.h
linker_script/: linker_script.c
memory/: contious_heap.c  heap_array_list.c  kmalloc.c  linkedlist.c  mem.c  page.c  paging_heap.c  umalloc.c
memory/include/: contious_heap.h  heap_array_list.h  kmalloc.h  mem.h  page.h  paging_heap.h  umalloc.h
proc/: blkqueue.c  brk.c  exec.c  exit.c  proc.c  proc_queue.c  schedule.c  signal.c  squeue.c  swap.c  wait.c
proc/elf/: dynlibs.c  elfloader.c
proc/elf/include/: dynlibs.h  elf.h  elfloader.h  proc.h
proc/include/: blkqueue.h  brk.h  exec.h  exit.h  proc.h  proc_queue.h  schedule.h  signal.h  squeue.h  swap.h  wait.h
proc/swap/: swap.c  swap_disk.c
proc/swap/include/: swap.h  swap_disk.h
