cmake_minimum_required(VERSION 3.6)
project(W2)
set(CMAKE_C_FLAGS "-fno-stack-protector -m32 -std=c99 -Wall -O0 -O -fstrength-reduce -fomit-frame-pointer -D__DCAT__ -DKERNEL=1 -finline-functions -c -nostdinc -fno-builtin")
include_directories(/home/dcat/osdev/w2/include)
include_directories(/home/dcat/osdev/w2/lib/include)
include_directories(/home/dcat/osdev/w2/memory/include)
include_directories(/home/dcat/osdev/w2/ker/include)
include_directories(/home/dcat/osdev/w2/proc/include)
include_directories(/home/dcat/osdev/w2/proc/swap/include)
include_directories(/home/dcat/osdev/w2/proc/elf/include)
include_directories(/home/dcat/osdev/w2/dev/include)
include_directories(/home/dcat/osdev/w2/fs/catmfs/include)
include_directories(/home/dcat/osdev/w2/fs/vfs/include)
include_directories(/home/dcat/osdev/w2/fs/procfs/include)
include_directories(/home/dcat/osdev/w2/fs/ext2/include)
FILE(GLOB MyCSources 
/home/dcat/osdev/w2/syscall_handler.c
/home/dcat/osdev/w2/mutex.c
/home/dcat/osdev/w2/main.c
/home/dcat/osdev/w2/fs_node.c
/home/dcat/osdev/w2/little_test.c
/home/dcat/osdev/w2/lib/env.c
/home/dcat/osdev/w2/lib/start.c
/home/dcat/osdev/w2/lib/file.c
/home/dcat/osdev/w2/lib/print.c
/home/dcat/osdev/w2/lib/syscall.c
/home/dcat/osdev/w2/lib/malloc.c
/home/dcat/osdev/w2/lib/str.c
/home/dcat/osdev/w2/memory/heap_array_list.c
/home/dcat/osdev/w2/memory/linkedlist.c
/home/dcat/osdev/w2/memory/mem.c
/home/dcat/osdev/w2/memory/kmalloc.c
/home/dcat/osdev/w2/memory/paging_heap.c
/home/dcat/osdev/w2/memory/umalloc.c
/home/dcat/osdev/w2/memory/page.c
/home/dcat/osdev/w2/memory/contious_heap.c
/home/dcat/osdev/w2/asm/page.s
/home/dcat/osdev/w2/asm/boot.s
/home/dcat/osdev/w2/asm/isrs.s
/home/dcat/osdev/w2/asm/syscall.s
/home/dcat/osdev/w2/asm/irqs.s
/home/dcat/osdev/w2/ker/idt.c
/home/dcat/osdev/w2/ker/isrs.c
/home/dcat/osdev/w2/ker/tss.c
/home/dcat/osdev/w2/ker/irqs.c
/home/dcat/osdev/w2/ker/system.c
/home/dcat/osdev/w2/ker/gdt.c
/home/dcat/osdev/w2/proc/exec.c
/home/dcat/osdev/w2/proc/wait.c
/home/dcat/osdev/w2/proc/proc.c
/home/dcat/osdev/w2/proc/signal.c
/home/dcat/osdev/w2/proc/schedule.c
/home/dcat/osdev/w2/proc/exit.c
/home/dcat/osdev/w2/proc/swap/swap.c
/home/dcat/osdev/w2/proc/swap/swap_disk.c
/home/dcat/osdev/w2/proc/elf/elfloader.c
/home/dcat/osdev/w2/dev/tty.c
/home/dcat/osdev/w2/dev/console.c
/home/dcat/osdev/w2/dev/keyboard.c
/home/dcat/osdev/w2/dev/blk_dev.c
/home/dcat/osdev/w2/dev/io.c
/home/dcat/osdev/w2/dev/ide.c
/home/dcat/osdev/w2/dev/vga.c
/home/dcat/osdev/w2/dev/timer.c
/home/dcat/osdev/w2/dev/serial.c
/home/dcat/osdev/w2/dev/screen.c
/home/dcat/osdev/w2/fs/catmfs/catmfs.c
/home/dcat/osdev/w2/fs/catmfs/catrfmt.c
/home/dcat/osdev/w2/fs/vfs/vfs.c
/home/dcat/osdev/w2/fs/procfs/procfs.c
/home/dcat/osdev/w2/fs/ext2/ext2.c
/home/dcat/osdev/w2/fs/ext2/ext2_fs_node.c
/home/dcat/osdev/w2/lib/include/malloc.h
/home/dcat/osdev/w2/lib/include/syscall.h
/home/dcat/osdev/w2/lib/include/print.h
/home/dcat/osdev/w2/lib/include/str.h
/home/dcat/osdev/w2/lib/include/file.h
/home/dcat/osdev/w2/lib/include/va.h
/home/dcat/osdev/w2/lib/include/uvfs.h
/home/dcat/osdev/w2/lib/include/intdef.h
/home/dcat/osdev/w2/lib/include/uproc.h
/home/dcat/osdev/w2/lib/include/stat.h
/home/dcat/osdev/w2/lib/include/env.h
/home/dcat/osdev/w2/lib/include/stdint.h
/home/dcat/osdev/w2/memory/include/linkedlist.h
/home/dcat/osdev/w2/memory/include/contious_heap.h
/home/dcat/osdev/w2/memory/include/kmalloc.h
/home/dcat/osdev/w2/memory/include/paging_heap.h
/home/dcat/osdev/w2/memory/include/mem.h
/home/dcat/osdev/w2/memory/include/page.h
/home/dcat/osdev/w2/memory/include/umalloc.h
/home/dcat/osdev/w2/memory/include/heap_array_list.h
/home/dcat/osdev/w2/include/fs_node.h
/home/dcat/osdev/w2/include/bochs_debug.h
/home/dcat/osdev/w2/include/mutex.h
/home/dcat/osdev/w2/include/syscall_handler.h
/home/dcat/osdev/w2/ker/include/system.h
/home/dcat/osdev/w2/ker/include/gdt.h
/home/dcat/osdev/w2/ker/include/isrs.h
/home/dcat/osdev/w2/ker/include/idt.h
/home/dcat/osdev/w2/ker/include/tss.h
/home/dcat/osdev/w2/ker/include/irqs.h
/home/dcat/osdev/w2/ker/include/multiboot.h
/home/dcat/osdev/w2/proc/include/schedule.h
/home/dcat/osdev/w2/proc/include/signal.h
/home/dcat/osdev/w2/proc/include/exec.h
/home/dcat/osdev/w2/proc/include/wait.h
/home/dcat/osdev/w2/proc/include/proc.h
/home/dcat/osdev/w2/proc/include/exit.h
/home/dcat/osdev/w2/proc/swap/include/swap.h
/home/dcat/osdev/w2/proc/swap/include/swap_disk.h
/home/dcat/osdev/w2/proc/elf/include/elf.h
/home/dcat/osdev/w2/proc/elf/include/elfloader.h
/home/dcat/osdev/w2/dev/include/console.h
/home/dcat/osdev/w2/dev/include/keyboard.h
/home/dcat/osdev/w2/dev/include/vga.h
/home/dcat/osdev/w2/dev/include/timer.h
/home/dcat/osdev/w2/dev/include/tty.h
/home/dcat/osdev/w2/dev/include/atadef.h
/home/dcat/osdev/w2/dev/include/blk_dev.h
/home/dcat/osdev/w2/dev/include/serial.h
/home/dcat/osdev/w2/dev/include/ide.h
/home/dcat/osdev/w2/dev/include/io.h
/home/dcat/osdev/w2/dev/include/screen.h
/home/dcat/osdev/w2/fs/catmfs/include/catrfmt.h
/home/dcat/osdev/w2/fs/catmfs/include/catrfmt_def.h
/home/dcat/osdev/w2/fs/catmfs/include/catmfs.h
/home/dcat/osdev/w2/fs/vfs/include/vfs.h
/home/dcat/osdev/w2/fs/procfs/include/procfs.h
/home/dcat/osdev/w2/fs/ext2/include/ext2_fs_node.h
/home/dcat/osdev/w2/fs/ext2/include/ext2.h
/home/dcat/osdev/w2/fs/ext2/include/superblk.h
)
ADD_EXECUTABLE(MyExecutable ${MyCSources})